Applied DataStore using PyTables
Added DataStore using PyTables for saving processed dataframe

--- a/Pandas_assignment.ipynb
+++ b/Pandas_assignment.ipynb
@@ -580,6 +580,178 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating the data storage object\n",
+    "ds = pd.HDFStore('pandas_assignment.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds['pandas_assignment'] = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Access data store\n",
+    "ds = pd.HDFStore('pandas_assignment.h5')\n",
+    "\n",
+    "# Retrieve data using key\n",
+    "airline_df = ds['pandas_assignment']\n",
+    "ds.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "      <th>delay1</th>\n",
+       "      <th>delay2</th>\n",
+       "      <th>delay3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10045</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>KLM(!)</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10055</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>&lt;Air France&gt; (12)</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Milan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10065</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>(British Airways. )</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Stockholm</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>87.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10075</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>12. Air France</td>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10085</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>\"Swiss Air\"</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>London</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FlightNumber  RecentDelays              Airline      From         To  \\\n",
+       "0         10045      [23, 47]               KLM(!)    London      Paris   \n",
+       "1         10055            []    <Air France> (12)    Madrid      Milan   \n",
+       "2         10065  [24, 43, 87]  (British Airways. )    London  Stockholm   \n",
+       "3         10075          [13]       12. Air France  Budapest      Paris   \n",
+       "4         10085      [67, 32]          \"Swiss Air\"  Brussels     London   \n",
+       "\n",
+       "   delay1  delay2  delay3  \n",
+       "0    23.0    47.0     NaN  \n",
+       "1     NaN     NaN     NaN  \n",
+       "2    24.0    43.0    87.0  \n",
+       "3    13.0     NaN     NaN  \n",
+       "4    67.0    32.0     NaN  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "airline_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
